--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,3 +1,4 @@
+aiomysql==0.2.0
 annotated-types==0.7.0
 anyio==4.9.0
 certifi==2025.4.26
@@ -20,6 +21,7 @@ mysql-connector-python==9.3.0
 pydantic==2.11.4
 pydantic_core==2.33.2
 Pygments==2.19.1
+PyMySQL==1.1.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
