--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.6
 dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.12
+fastapi-cache2==0.2.2
 fastapi-cli==0.0.7
 h11==0.16.0
 httpcore==1.0.9
@@ -18,21 +19,25 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mysql-connector-python==9.3.0
+pendulum==3.1.0
 pydantic==2.11.4
 pydantic_core==2.33.2
 Pygments==2.19.1
 PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 rich==14.0.0
 rich-toolkit==0.14.5
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
 typer==0.15.3
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+tzdata==2025.2
 uvicorn==0.34.2
 watchfiles==1.0.5
 websockets==15.0.1
