--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,8 +2,10 @@ aiomysql==0.2.0
 annotated-types==0.7.0
 anyio==4.9.0
 certifi==2025.4.26
+cffi==1.17.1
 click==8.2.0
 colorama==0.4.6
+cryptography==45.0.2
 dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.12
@@ -20,6 +22,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 mysql-connector-python==9.3.0
 pendulum==3.1.0
+pycparser==2.22
 pydantic==2.11.4
 pydantic_core==2.33.2
 Pygments==2.19.1
