Add JMeter test plans and performance reporting configurations
- Created multiple JMeter test plans (requests-1.jmx, requests-2.jmx, requests-3.jmx, requests.jmx) for API testing with different versions.
- Added a comprehensive JMeter test plan (modified_requests.jmx) for performance testing with multiple HTTP GET requests.
- Introduced performance result CSV file (perf_result_csv.csv) to log test results.
- Added system properties files (system-1.properties, system-2.properties, system-3.properties, system.properties) to configure network settings.
- Created YAML configuration files (test-v1.yaml, test-v2.yaml) for BlazeMeter testing scenarios with detailed execution and reporting settings.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,18 @@ services:
     networks:
       - internal_network
 
+  test:
+    build: ./test
+    container_name: test
+    depends_on:
+      - api
+    volumes:
+      - ./test:/app
+      - ./test/reports:/tmp/artifacts  
+    networks:
+      - internal_network
+
+
 
 
 networks:
