cambio de api por localhost

--- a/test/test-v2.yaml
+++ b/test/test-v2.yaml
@@ -9,13 +9,13 @@ execution:
 scenarios:
   api-test:
     requests:
-      - url: http://api:8000/v2/inventory
+      - url: http://localhost:8000/v2/inventory
         method: GET
         label: get-actors
-      - url: http://api:8000/v2/movies
+      - url: http://localhost:8000/v2/movies
         method: GET
         label: get-movies
-      - url: http://api:8000/v2/customers
+      - url: http://localhost:8000/v2/customers
         method: GET
         label: get-customers
 
