--- a/test/test-v2.yaml
+++ b/test/test-v2.yaml
@@ -26,10 +26,10 @@ reporting:
     percentiles: true 
     failed-labels: false
     test-duration: true
-    dump-csv: /test/reports/perf_result_csv.csv
+    dump-csv: ./test/reports/perf_result_csv.csv
   - module: junit-xml
     data-source: pass-fail
-    filename: /test/reports/junit-result.xml
+    filename: ./test/reports/junit-result.xml
   - module: blazemeter
     report-name: API Performance Test 2
     test: API Test v2
